--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.khalilayache.basicuserinterfaceproject.MainActivity"
-    >
+    tools:context="com.khalilayache.basicuserinterfaceproject.MainActivity">
 
   <ImageView
-      android:id="@+id/imageView"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      app:srcCompat="@drawable/front99"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintDimensionRatio="h,1:1"
-      android:adjustViewBounds="true"
-      android:cropToPadding="false"
-      android:layout_marginLeft="0dp"
-      android:layout_marginTop="0dp"
-      app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
-
-  <ImageView
-      android:id="@+id/imageView2"
+      android:id="@+id/topBar"
       android:layout_width="match_parent"
       android:layout_height="48dp"
-      android:layout_marginLeft="0dp"
-      android:layout_marginRight="0dp"
-      android:layout_marginTop="0dp"
-      android:layout_weight="1"
       app:srcCompat="@drawable/logo_yellow"
       android:background="@color/colorPrimary"
       android:adjustViewBounds="false"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
       android:contentDescription="@string/logo_99"/>
 
-</android.support.constraint.ConstraintLayout>
+  <ImageView
+      android:id="@+id/bannerPhoto"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/topBar"
+      app:srcCompat="@drawable/front99"
+      android:contentDescription="@string/front_company"
+      android:adjustViewBounds="true"/>
+
+
+  <ScrollView
+      android:id="@+id/aboutText"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/bannerPhoto"
+      android:layout_marginBottom="16dp"
+      android:layout_marginEnd="16dp"
+      android:layout_marginLeft="16dp"
+      android:layout_marginRight="16dp"
+      android:layout_marginStart="16dp"
+      android:scrollbars="horizontal"
+      android:overScrollMode="never"
+      android:fadeScrollbars="false">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+      <TextView
+          android:id="@+id/companyLocation"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="8dp"
+          android:layout_marginTop="16dp"
+          android:drawablePadding="16dp"
+          android:gravity="center|start"
+          android:textAlignment="textStart"
+          android:drawableStart="@drawable/location"
+          android:textSize="14sp"
+          android:textColor="@android:color/black"
+          android:text="@string/address_company"/>
+
+      <TextView
+          android:id="@+id/companyPhone"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="8dp"
+          android:drawablePadding="16dp"
+          android:gravity="center|start"
+          android:textAlignment="textStart"
+          android:drawableStart="@drawable/phone"
+          android:textSize="14sp"
+          android:textColor="@android:color/black"
+          android:text="@string/phone_company"/>
+
+      <TextView
+          android:id="@+id/aboutTitle"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="8dp"
+          android:textSize="16sp"
+          android:textColor="@android:color/black"
+          android:text="@string/about"/>
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textSize="14sp"
+          android:scrollbars="vertical"
+          android:textColor="@android:color/black"
+          android:text="@string/about_company"/>
+
+    </LinearLayout>
+
+  </ScrollView>
+
+</RelativeLayout>
